# mbed-os

targets/: targets.json
targets/TARGET_STM/: stm_spi_api.c
targets/TARGET_STM/TARGET_STM32F0/STM32Cube_FW/: system_stm32f0xx.c
targets/TARGET_STM/TARGET_STM32G0/: CMakeLists.txt  i2c_device.h  serial_device.c  us_ticker_data.h
targets/TARGET_STM/TARGET_STM32G0/TARGET_STM32G070xx/TARGET_NUCLEO_G070RB/: CMakeLists.txt  PeripheralNames.h  PinNames.h  system_clock.c
targets/TARGET_STM/TARGET_STM32G0/TARGET_STM32G0B0xx/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32G0/TARGET_STM32G0B0xx/TARGET_NUCLEO_G0B0RE/: PeripheralNames.h  PinNames.h  system_clock.c
targets/TARGET_STM/TARGET_STM32G0/TARGET_STM32G0B0xx/TOOLCHAIN_ARM/: startup_stm32g0b0xx.s
targets/TARGET_STM/TARGET_STM32G0/TARGET_STM32G0B0xx/TOOLCHAIN_GCC_ARM/: startup_stm32g0b0xx.s
